force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__AdBleedAmountUom__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdBleedAmountUom__c</fullName>
    <description>Bleed height and width measure.</description>
    <label>Ad Bleed Amount Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pixels</fullName>
            </value>
            <value>
                <fullName>mm</fullName>
            </value>
            <value>
                <fullName>Inches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>