force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__AdRequestedStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdRequestedStartDate__c</fullName>
    <description>This captures the Requested Start Date for the Placement.</description>
    <label>Ad Requested Start Date</label>
    <type>DateTime</type>
</CustomField>