force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__AdSpaceSpecificationId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdSpaceSpecificationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Ad Space Specification record.</description>
    <label>AdSpace Specification</label>
    <referenceTo>vlocity_cmt__AdSpaceSpecification__c</referenceTo>
    <relationshipLabel>Media Plan Placements</relationshipLabel>
    <relationshipName>QuoteLineItemAdPlacements</relationshipName>
    <type>Lookup</type>
</CustomField>