force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__MaximumFrequencyInterval__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MaximumFrequencyInterval__c</fullName>
    <description>Maximum Frequency Unit used for Frequency Capping.</description>
    <label>Maximum Frequency Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Minute</fullName>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>