force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__MaximumUserFrequencyInterval__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MaximumUserFrequencyInterval__c</fullName>
    <description>Maximum User Frequency Interval.</description>
    <label>Maximum User Frequency Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Minute</fullName>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>