force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__QuoteId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuoteId__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Media Plan Placements</relationshipLabel>
    <relationshipName>QuoteLineItemAdPlacements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>