force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__QuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuoteLineItemId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Media Plan Placements</relationshipLabel>
    <relationshipName>QuoteLineItemAdPlacements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>