force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__QuoteLineItemOneTimeTotal__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuoteLineItemOneTimeTotal__c</fullName>
    <description>This refers to the One Time Total of the Quote LineItem record.</description>
    <formula>vlocity_cmt__QuoteLineItemId__r.vlocity_cmt__OneTimeTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One Time Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>